--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link "href="{{ url_for('patients_blueprint.tables') }}">
+          <a class="nav-link "href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
             </div>
@@ -53,7 +53,7 @@
           <h6 class="ps-4 me-4 pe-2 text-uppercase text-xs font-weight-bolder opacity-6">הגדרות משתמש</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link "  href="{{ url_for('patients_blueprint.tables') }}">
+          <a class="nav-link "  href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
             </div>
