--- a/apps/templates/patients/patient_info.html
+++ b/apps/templates/patients/patient_info.html
@@ -168,22 +168,16 @@
                                         <div class="col-md-5 mb-md-0 mb-4">
                                             <card class="card mt-2">
                                                 <div class="d-flex flex-column">
-                                                    <h6 class="mb-3 text-sm">
-                                                        {{ contact.f_name }}{{ contact.l_name }}</h6>
-                                                    <span class="mb-2 text-xs">Company Name: <span
-                                                            class="text-dark font-weight-bold ms-sm-2">Viking Burrito</span></span>
-                                                    <span class="mb-2 text-xs">Email Address: <span
-                                                            class="text-dark ms-sm-2 font-weight-bold">oliver@burrito.com</span></span>
-                                                    <span class="text-xs">VAT Number: <span
-                                                            class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
+                                                    <h6 class="mb-3 text-sm"> {{ contact.f_name }} {{ contact.l_name }} {{ contact.contact_id }} </h6>
+                                                    <span class="mb-2 text-xs">איש קשר מועדף: <span class="text-dark font-weight-bold ms-sm-2"> {{ contact.priority }} </span></span>
+                                                    <span class="mb-2 text-xs">מייל: <span class="text-dark ms-sm-2 font-weight-bold"> {{ contact.mail }} </span></span>
+                                                    <span class="text-xs">טלפון : <span class="text-dark ms-sm-2 font-weight-bold"> {{ contact.phone }} </span></span>
                                                 </div>
                                                 <div class="ms-auto text-end">
-                                                    <a class="btn btn-link text-danger text-gradient px-3 mb-0"
-                                                       data-target="#modal_del_contact{{ contact.contact_id }}"
-                                                       data-toggle="modal"
-                                                       href="/delete_contact/{{ contact.contact_id }}"><i
-                                                            class="far fa-trash-alt me-2"
-                                                            aria-hidden="true"></i>מחיקה</a>
+                                                    <a class="btn btn-link text-danger text-gradient px-3 mb-0" data-target="#modal_del_contact{{ contact.contact_id }}" data-toggle="modal"
+                                                       href="/delete_contact/{{ contact.contact_id }}">
+                                                        <i class="far fa-trash-alt me-2" aria-hidden="true"></i>מחיקה
+                                                    </a>
 
 
                                                     <a class="btn btn-link text-info text-gradient px-3 mb-0"
@@ -247,6 +241,9 @@
                                                         </div>
                                                     </div>
 
+
+
+
                                                     <!-- Delete Contact modal!-->
                                                     <div id="modal_del_contact{{ contact.contact_id }}"
                                                          class="modal fade"
@@ -300,23 +297,15 @@
                                                                 <th class="text-uppercase text-secondary text-m font-weight-bolder opacity-7">
                                                                     יום
                                                                 </th>
-                                                                <th class="text-uppercase text-secondary text-m font-weight-bolder opacity-7 ps-2">
-                                                                    משעה
-                                                                </th>
-                                                                <th class="text-center text-uppercase text-secondary text-m font-weight-bolder opacity-7">
-                                                                    עד שעה
-                                                                </th>
+                                                                <th class="text-uppercase text-secondary text-m font-weight-bolder opacity-7 ps-2">  משעה  </th>
+                                                                <th class="text-center text-uppercase text-secondary text-m font-weight-bolder opacity-7"> עד שעה </th>
                                                                 <th class="text-primary opacity-7"></th>
-                                                                <th type="button"
-                                                                    class=" text-primary opacity-7 btn btn-success float-right"
-                                                                    data-toggle="modal"
-                                                                    data-target="#add_contact_time_modal">
+                                                                <th type="button" class=" text-primary opacity-7 btn btn-success float-right" data-toggle="modal" data-target="#add_contact_time_modal{{ contact.contact_id }}">
                                                                     הוספת שורה חדשה
                                                                 </th>
-
-
                                                             </tr>
                                                             </thead>
+
                                                             <tbody>
                                                             {% for time in contact.contacts_times %}
                                                                 <tr>
@@ -329,29 +318,90 @@
                                                                     <td class="align-middle text-center">
                                                                         <span class="text-secondary text-m font-weight-bold">{{ time.to_hour }}</span>
                                                                     <td>
-                                                                    <td><a data-target="#del_contact_time_modal"
+                                                                    <td><a data-target="#del_contact_time_modal{{ time.id }}"
                                                                            data-toggle="modal"
                                                                            class="btn btn-link text-danger text-gradient px-3 mb-0"><i
                                                                             class="far fa-trash-alt me-2"></i>מחיקה</a>
                                                                     </td>
                                                                 </tr>
+
+                                                            <!-- Add  contact time modal -->
+<div id="add_contact_time_modal{{ contact.contact_id }}" class="modal fade" role="dialog" dir="rtl">
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header"> <h4 class="modal-title"> הוספת חלון זמן </h4> </div>
+         <div class="modal-body">
+            <form method="POST" action="{{ url_for('patients_blueprint.add_contact_time',contact_id = contact.contact_id) }}">
+               <div class="row">
+                  <div class="form-group col-md-3">
+                     {{ contact_time_form.day.label(class="form-control-label") }}
+                     {{ contact_time_form.day(class="form-control") }}
+                  </div>
+                  <div class="form-group col-md-3">
+                     {{ contact_time_form.from_hour.label(class="form-control-label") }}
+                     {{ contact_time_form.from_hour(class="form-control") }}
+                  </div>
+                  <div class="form-group col-md-3">
+                     {{ contact_time_form.to_hour.label(class="form-control-label") }}
+                     {{ contact_time_form.to_hour(class="form-control") }}
+                  </div>
+                  <div class="form-group">
+                     <button class="btn btn-primary" type="submit"> שמירת  שינויים </button>
+                  </div>
+               </div>
+            </form>
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+         </div>
+      </div>
+   </div>
+</div>
+
                                                             {% endfor %}
-                                                            </tbody>
-                                                        </table>
-                                                    </div>
+
+                                    <!-- delete contact modal -->
+                                    <div class="modal" tabindex="-1" role="dialog" id="del_contact_time_modal{{ time.id }}">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title">מחיקת מטופל</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>האם את\ה בטוח\ה שברצונך למחוק את
+                                                        {{ time.from }} {{ time.to }} {{ time.day }}
+                                                        מרשימת הזמנים של
+                                                        {{ contact.f_name }}
+                                                    </p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול</button>
+                                                    <form method="POST" action="{{ url_for('patients_blueprint.delete_contact_time',time_id=time.id) }}">
+                                                        <input class="btn btn-danger" type="submit" value="מחיקה">
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
 
+                                                            </tbody>
+                                                        </table>
 
 
-                                </div>
 
+
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                 </li>
                                 </ul>
                             {% endfor %}
-
                     </div>
+
 
                 </div>
             </div>
