--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -42,7 +42,7 @@
 
                     <div>
                         <button type="button" class="btn btn-success float-right" onclick="load_patients(); load_days();"
-                                data-toggle="modal" data-target="#add_new_event_modal">אירוע חדש דנדש
+                                data-toggle="modal" data-target="#add_new_event_modal">יצירת שיחה חדשה
                         </button>
                     </div>
 
@@ -60,63 +60,9 @@
         <section class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="sticky-top mb-3">
-                            <div class="card">
-                                <div class="card-header">
-                                    <h4 class="card-title">Draggable Events</h4>
-                                </div>
-                                <div class="card-body">
-                                    <!-- the events -->
-                                    <div id="external-events">
-                                        <div class="external-event bg-success">Lunch</div>
-                                        <div class="external-event bg-warning">Go home</div>
-                                        <div class="external-event bg-info">Do homework</div>
-                                        <div class="external-event bg-primary">Work on UI design</div>
-                                        <div class="external-event bg-danger">Sleep tight</div>
-                                        <div class="checkbox">
-                                            <label for="drop-remove">
-                                                <input type="checkbox" id="drop-remove">
-                                                remove after drop
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /.card-body -->
-                            </div>
-                            <!-- /.card -->
-                            <div class="card">
-                                <div class="card-header">
-                                    <h3 class="card-title">Create Event</h3>
-                                </div>
-                                <div class="card-body">
-                                    <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
-                                        <ul class="fc-color-picker" id="color-chooser">
-                                            <li><a class="text-primary" href="#"><i class="fas fa-square"></i></a></li>
-                                            <li><a class="text-warning" href="#"><i class="fas fa-square"></i></a></li>
-                                            <li><a class="text-success" href="#"><i class="fas fa-square"></i></a></li>
-                                            <li><a class="text-danger" href="#"><i class="fas fa-square"></i></a></li>
-                                            <li><a class="text-muted" href="#"><i class="fas fa-square"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <!-- /btn-group -->
-                                    <div class="input-group">
-                                        <input id="new-event" type="text" class="form-control"
-                                               placeholder="Event Title">
 
-                                        <div class="input-group-append">
-                                            <button id="add-new-event" type="button" class="btn btn-primary">Add
-                                            </button>
-                                        </div>
-                                        <!-- /btn-group -->
-                                    </div>
-                                    <!-- /input-group -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <!-- /.col -->
-                    <div class="col-md-9">
+                    <div class="col-md-12">
                         <div class="card card-primary">
                             <div class="card-body p-0">
                                 <!-- THE CALENDAR -->
@@ -364,13 +310,6 @@ function closemodal() {
           // store the Event Object in the DOM element so we can get to it later
           $(this).data('eventObject', eventObject)
 
-          // make the event draggable using jQuery UI
-          $(this).draggable({
-            zIndex        : 1070,
-            revert        : true, // will cause the event to go back to its
-            revertDuration: 0  //  original position after the drag
-          })
-
         })
       }
 
@@ -385,7 +324,6 @@ function closemodal() {
           y    = date.getFullYear()
 
       var Calendar = FullCalendar.Calendar;
-      var Draggable = FullCalendarInteraction.Draggable;
 
       var containerEl = document.getElementById('external-events');
       var checkbox = document.getElementById('drop-remove');
@@ -394,18 +332,6 @@ function closemodal() {
       // initialize the external events
       // -----------------------------------------------------------------
 
-      new Draggable(containerEl, {
-        itemSelector: '.external-event',
-        eventData: function(eventEl) {
-          console.log(eventEl);
-          return {
-            title: eventEl.innerText,
-            backgroundColor: window.getComputedStyle( eventEl ,null).getPropertyValue('background-color'),
-            borderColor: window.getComputedStyle( eventEl ,null).getPropertyValue('background-color'),
-            textColor: window.getComputedStyle( eventEl ,null).getPropertyValue('color'),
-          };
-        }
-      });
 
       var calendar = new Calendar(calendarEl, {
         plugins: [ 'bootstrap', 'interaction', 'dayGrid', 'timeGrid' ],
