--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -16,7 +16,7 @@
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
               <div class="card card-plain">
                 <div class="card-header pb-0 text-start">
-                  <h4 class="font-weight-bolder">התחברות</h4>
+                  <h4 class="font-weight-bolder">התחברות למערכת</h4>
                   <p class="mb-0">
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
@@ -30,10 +30,10 @@
 
                     {{ form.hidden_tag() }}
                     <div class="mb-3">
-                      {{ form.username(placeholder="Username",class="form-control") }}
+                      {{ form.username(placeholder="הזינו שם משתמש",class="form-control") }}
                     </div>
                     <div class="mb-3">
-                      {{ form.password(placeholder="Password",class="form-control",type="password") }}
+                      {{ form.password(placeholder="הזינו סיסמה",class="form-control",type="password") }}
                     </div>
                     <div class="form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="rememberMe">
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
-                    עדיין לא נפתחה מחלקה ?
+                    עדיין לא נפתחה מחלקה?
                     <br>
                       <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">ליצירת מחלקה</a>
                   </p>
