--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -56,13 +56,13 @@
                   {{ form.hidden_tag() }}
 
                   <div class="mb-3" dir="rtl">
-                    {{ form.username(placeholder="מספר מחלקה",class="form-control") }}
+                    {{ form.username(placeholder="הזינו שם משתמש",class="form-control") }}
                   </div>
                   <div class="mb-3" dir="rtl">
-                    {{ form.email(placeholder="כתובת מייל",class="form-control") }}
+                    {{ form.email(placeholder="הזינו כתובת מייל",class="form-control") }}
                   </div>
                   <div class="mb-3" dir="rtl">
-                    {{ form.password(placeholder="סיסמה",class="form-control",type="password") }}
+                    {{ form.password(placeholder="הזינו סיסמה",class="form-control",type="password") }}
                   </div>
                   <div class="form-check form-check-info text-start">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
