--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -2,8 +2,8 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="/" target="_blank">
-        <img src="{{ config.ASSETS_ROOT }}/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="me-1 font-weight-bold text-lg">Call me</span>
+        <img src="{{ config.ASSETS_ROOT }}/img/logo-ct-dark2.jpeg" class="navbar-brand-img h-100" alt="main_logo">
+        <span class="me-1 font-weight-bold text-lg">CallMe</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
